Aprobación de W3C y separación de scripts

--- a/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
@@ -82,7 +82,7 @@
       <div class="col-lg-6 col-md-12 mx-auto" id="firstCol">
       	<div>
 	      	<h1 class="margin_bot">Contáctanos</h1>
-	        <p>Quieres contactarte con nosotros? Llena el formulario y te responderemos lo más rápido</p>
+	        <p>Quieres contactarte con nosotros? Llena el formulario y te responderemos lo más rápido posible</p>
 	    </div>
       </div>
       <div class="col-lg-6 col-md-12 mx-auto" id="secondCol">
