--- a/Plantilla/startbootstrap-clean-blog-gh-pages/receta.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/receta.html
@@ -209,19 +209,19 @@
   </div>
   <!--recipe section-->
 
-  <section class="container" data-step="3" data-intro="En esta sección podras leer y escribir comentarios sobre las recetas" data-position="auto">
+  <div class="container" data-step="3" data-intro="En esta sección podras leer y escribir comentarios sobre las recetas" data-position="auto">
     <div class="row">
       <div class="col-12">
         <div class="comments">
           <div class="comments-details">
             <span class="total-comments comments-sort">117 Comentarios</span>
-            <span class="dropdown">
+            <div class="dropdown">
                 <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">Ordenar por <span class="caret"></span></button>
                 <div class="dropdown-menu">
                   <a href="#" class="dropdown-item">Mejores comentarios</a>
                 <a href="#" class="dropdown-item">Nuevos comentarios</a>
                 </div>
-            </span>     
+              </div>     
           </div>
           <div class="comment-box add-comment" >
             <span class="commenter-pic">
@@ -230,7 +230,7 @@
             <span class="commenter-name">
               <input type="text" placeholder="Add a public comment" name="Add Comment">
               <button type="submit" class="btn btn-default">Comentar</button>
-              <button type="cancel" class="btn btn-default">Cancelar</button>
+              <button type="reset" class="btn btn-default">Cancelar</button>
             </span>
           </div>
           <div class="comment-box">
@@ -253,7 +253,7 @@
               <span class="commenter-name">
                 <input type="text" placeholder="Add a public reply" name="Add Comment">
                 <button type="submit" class="btn btn-default">Responder</button>
-                <button type="cancel" class="btn btn-default reply-popup">Cancel</button>
+                <button type="reset" class="btn btn-default reply-popup">Cancel</button>
               </span>
             </div>
           </div>
@@ -302,7 +302,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
 
   <!-- Footer -->
   <footer>
