--- a/Plantilla/startbootstrap-clean-blog-gh-pages/registro.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/registro.html
@@ -116,7 +116,7 @@
             <input class="dark-font" type="password" required>
           </div>
           <div class="form-group floating-label-form-group controls inner_pad">
-            <button class="red-button button">Sign In</button>
+            <button class="red-button button">Sign Up</button>
           </div>
         </form>
       </div>
