--- a/Plantilla/startbootstrap-sb-admin-gh-pages/startbootstrap-sb-admin-gh-pages/admin/noticias.html
+++ b/Plantilla/startbootstrap-sb-admin-gh-pages/startbootstrap-sb-admin-gh-pages/admin/noticias.html
@@ -152,7 +152,7 @@
                                 </div>
                                 <div id="test-l-4" class="content">
                                     <p class="text-center">Vista Previa</p>
-                                    <h1 id="tituloOutput" style="text-align: center;"> </h1>
+                                    <h1 id="tituloOutput" style="text-align: center;">Titulo</h1>
                                     <div style = "text-align: center;">    <img id="noticiaimg" src="#" alt="imagenSubida"/></div>
                                     <br><br>
                                     <p id = "contenidoOutput"> </p>
@@ -182,47 +182,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="js/scripts.js"></script>
         <script src="js/bs-stepper.js"></script>
-        <script>
-          var stepper1Node = document.querySelector('#stepper1')
-          var stepper1 = new Stepper(document.querySelector('#stepper1'))
-    
-          stepper1Node.addEventListener('show.bs-stepper', function (event) {
-            console.warn('show.bs-stepper', event)
-          })
-          stepper1Node.addEventListener('shown.bs-stepper', function (event) {
-            console.warn('shown.bs-stepper', event)
-          })
-    
-          var stepper2 = new Stepper(document.querySelector('#stepper2'), {
-            linear: false,
-            animation: true
-          })
-          var stepper3 = new Stepper(document.querySelector('#stepper3'), {
-            animation: true
-          })
-          var stepper4 = new Stepper(document.querySelector('#stepper4'))
-        </script>
-        <script>
-            function readURL(input) {
-        if (input.files && input.files[0]) {
-            var reader = new FileReader();
-
-            reader.onload = function (e) {
-                $('#noticiaimg')
-                    .attr('src', e.target.result)
-                    .width(300)
-                    .height(300);
-            };
-
-            reader.readAsDataURL(input.files[0]);
-        }
-    }
-        </script>
-        <script type="text/javascript">
-            function f(idInput, idOutput) {
-               var t = document.getElementById(idInput).value;
-               document.getElementById(idOutput).innerHTML = t;
-            }
-            </script>
+        <script src="js/noticia.js"></script>
     </body>
 </html>
